Fix negative random number result issue

--- a/lab_3/Makefile
+++ b/lab_3/Makefile
@@ -1,8 +1,9 @@
 SRC=src/
 BIN=bin/
 OBJ=obj/
+LIB=lib/
 
-test: $(OBJ)cai.o $(OBJ)input.o
+test: $(OBJ)cai.o $(OBJ)input.o $(OBJ)structlib.o $(OBJ)helper.o
 	gcc -Wall -Werror -o $(BIN)cai $(OBJ)cai.o $(OBJ)input.o $(OBJ)structlib.o $(OBJ)helper.o
 
 %.o: %.c
@@ -13,6 +14,6 @@ clean:
 
 build:
 	gcc -Wall -Werror -c -o $(OBJ)cai.o $(SRC)cai.c
-	gcc -Wall -Werror -c -o $(OBJ)input.o $(SRC)lib/src/input.c
-	gcc -Wall -Werror -c -o $(OBJ)structlib.o $(SRC)lib/src/structlib.c
-	cc -Wall -Werror -c -o $(OBJ)helper.o $(SRC)lib/src/helper.c
+	gcc -Wall -Werror -c -o $(OBJ)input.o $(LIB)src/input.c
+	gcc -Wall -Werror -c -o $(OBJ)structlib.o $(LIB)src/structlib.c
+	cc -Wall -Werror -c -o $(OBJ)helper.o $(LIB)src/helper.c
