--- a/lab_4/Makefile
+++ b/lab_4/Makefile
@@ -4,7 +4,7 @@ OBJ=obj/
 LIB=lib/
 
 test: $(OBJ)main.o $(OBJ)sol.o
-	gcc -Wall -Werror -o $(BIN)main $(OBJ)main.o $(OBJ)sol.o $(OBJ)set.o
+	gcc -Wall -Werror -o $(BIN)main $(OBJ)main.o $(OBJ)sol.o
 
 %.o: %.c
 	gcc -c -Wall -Werror -o $@ $<
@@ -15,4 +15,3 @@ clean:
 build:
 	gcc -Wall -Werror -c -o $(OBJ)main.o $(SRC)main.c
 	gcc -Wall -Werror -c -o $(OBJ)sol.o $(LIB)sol.c
-	gcc -Wall -Werror -c -o $(OBJ)set.o $(LIB)set.c
