Add comments lab 4

--- a/lab_4/Makefile
+++ b/lab_4/Makefile
@@ -3,8 +3,8 @@ BIN=bin/
 OBJ=obj/
 LIB=lib/
 
-test: $(OBJ)main.o $(OBJ)sol.o
-	gcc -Wall -Werror -o $(BIN)main $(OBJ)main.o $(OBJ)sol.o
+test: $(OBJ)main.o $(OBJ)aoc.o
+	gcc -Wall -Werror -o $(BIN)main $(OBJ)main.o $(OBJ)aoc.o
 
 %.o: %.c
 	gcc -c -Wall -Werror -o $@ $<
@@ -14,4 +14,4 @@ clean:
 
 build:
 	gcc -Wall -Werror -c -o $(OBJ)main.o $(SRC)main.c
-	gcc -Wall -Werror -c -o $(OBJ)sol.o $(LIB)sol.c
+	gcc -Wall -Werror -c -o $(OBJ)aoc.o $(LIB)aoc.c
